Fix header/nav spacing after locking nav to top of page

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,5 @@
 header {
+  margin-top: 112px;
   height: 400;
   width: 100%;
   display: flex;
